fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -384,6 +384,9 @@ a:active {
   margin-left: 25px;
 }
 
+body.dark .Game-new-sidebar {
+  background-color: #555;
+}
 
 .topwrap {
   width: 100%;
